@@ -401,6 +401,20 @@ line.  The default value of this property is false.
 </TR>
 
 <TR>
+<TD>mail.mime.allowencodedmessages</TD>
+<TD>boolean</TD>
+<TD>
+The MIME spec does not allow body parts of type message/* to be encoded.
+The Content-Transfer-Encoding header is ignored in this case.
+Some versions of Microsoft Outlook will incorrectly encode message
+attachments.  Setting this System property to <code>"true"</code> will
+cause the Content-Transfer-Encoding header to be honored for message
+attachments.
+The default value of this property is false.
+</TD>
+</TR>
+
+<TR>
 <TD>mail.mime.contenttypehandler</TD>
 <TD>String</TD>
 <TD>
